--- a/view/index.html
+++ b/view/index.html
@@ -9,9 +9,9 @@
     <br>
     <br>
     <h4 class="text-center display-5 text-warning">USER</h4>
-    <table class="table table-hover">
+    <table class="table table-bordered">
         <thead>
-            <tr>
+            <tr  class="text-white">
               <th>Route - Post(login)</th>
               <th>Route - Get(/users)</th>
               <th>Route - Put(/user/:id)</th>
@@ -20,7 +20,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr class="text-white">
+            <tr>
               <td>Used to login in</td>
               <td>Used to fetch users</td>
               <td>Used to update user</td>
@@ -32,9 +32,9 @@
       </table>
       <br>
       <h4 class="text-center display-5 text-warning">PRODUCT</h4>
-      <table class="table table-hover">
+      <table class="table table-bordered">
         <thead>
-            <tr>
+            <tr  class="text-white">
               <th>Route - get(/products)</th>
               <th>Route - get(/product/:id)</th>
               <th>Route - Post(/product)</th>
@@ -43,7 +43,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr class="text-white">
+            <tr>
               <td>Fetches all products</td>
               <td>Gets a single specific product by Id</td>
               <td>Used to add a product</td>
